--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adempiere/grpc-pos-client",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "ADempiere POS Client write in Javascript for gRPC service",
   "main": "index.js",
   "scripts": {
@@ -12,15 +12,21 @@
   },
   "author": "Yamel Senih",
   "license": "GPL-3.0-or-later",
+  "contributors": [
+    {
+      "name": "Edwin Betancourt",
+      "url": "https://github.com/EdwinBetanc0urt/"
+    }
+  ],
   "bugs": {
     "url": "https://github.com/erpcya/gRPC-POS-Client/issues"
   },
   "homepage": "https://github.com/erpcya/gRPC-POS-Client#readme",
   "dependencies": {
-    "google-protobuf": "^3.6.1",
-    "grpc": "^1.18.0",
+    "google-protobuf": "^3.11.4",
+    "grpc": "^1.24.2",
     "grpc-promise": "^1.4.0",
-    "grpc-web": "^1.0.3",
+    "grpc-web": "^1.0.7",
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {},
