--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adempiere/grpc-pos-client",
-  "version": "1.1.9",
+  "version": "1.2.0",
   "description": "ADempiere POS Client write in Javascript for gRPC service",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/erpcya/gRPC-POS-Client#readme",
   "dependencies": {
+    "@adempiere/grpc-core-client": "^1.0.3",
     "google-protobuf": "^3.11.4",
     "grpc": "^1.24.2",
     "grpc-promise": "^1.4.0",
